fixed save button not showing

--- a/website/static/cssexternalpages/stylesheet.css
+++ b/website/static/cssexternalpages/stylesheet.css
@@ -73,7 +73,7 @@
         flex-direction: column;
         flex-wrap: nowrap;
         margin-bottom: -0.25rem;
-        height: 100vh;
+        height: 100%;
         align-items: center;
     }
 
@@ -130,6 +130,11 @@
     textarea::placeholder{
         font-size: 1rem;
         line-height: 1rem;
+    }
+
+    form{
+        height: fit-content;
+        margin-bottom: 5rem;
     }
 
     form a{
